@@ -2,6 +2,10 @@ iRedMail-0.9.8:
     * Apache has been removed, Nginx is the only one web server available.
 
     * Fixed issues:
+        - Cannot log backup result to SQL db in tools/backup_openldap.sh.
+          Note: backup is fine, just no log in SQL db.
+          Thanks swejun <ingvar _at_ zebware.com> for the feedback and fix in
+          forum.
         - SQL backends: User under disabled domain is able to send email with
           smtp protocol.
         - Cannot sync contacts on Android devices via EAS with SOGo.
